# romea-ros2-implement

./: romea_implement.repos
romea_implement_bringup/: CMakeLists.txt  README.md  package.xml
romea_implement_bringup/config/: hitch_controller_manager.yaml  hitch_controllers.yaml
romea_implement_bringup/launch/: implement.launch.py  implement_controllers.launch.py
romea_implement_bringup/python/: romea_implement_bringup.py
romea_implement_bringup/scripts/: simple_command  urdf_description.py
romea_implement_description/: CMakeLists.txt  README.md  package.xml
romea_implement_description/meshes/: cultivator.mtl
romea_implement_description/python/: romea_implement_description.py
romea_implement_description/urdf/: common.xacro  hitch_cultivator.xacro.urdf  hitch_hoe.xacro.urdf  hitch_implement.xacro
romea_implement_msgs/: CMakeLists.txt  package.xml
romea_implement_msgs/msg/: Command.msg  State.msg  Status.msg
