<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_implement_bringup</name>
  <version>0.0.0</version>
  <description>Package containing implement launch files.</description>
  <maintainer email="tscf-dev@inrae.fr">Inrae TSCF</maintainer>
  <license>Apache License 2.0</license>

  <author email="vincent.rousseau@inrae.fr">Vincent Rousseau</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>romea_common_bringup</depend>
  <depend>romea_implement_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>